# deets

./: .dockerignore  .gitignore  AGENT_COMMS.md  AUDIT_EXECUTIVE_SUMMARY.md  CI_CD_VALIDATION_SETUP.md  CLAUDE.md  COMPLIANCE_AUDIT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.test  FINAL_STATUS.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  PHASE1_AUDIT.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_NEXT_STEPS.md  PHASE1_PROGRESS_SUMMARY.md  PHASE2_AUDIT_EXECUTION.md  PHASE2_AUDIT_PLAN.md  PHASE2_AUDIT_README.md  PHASE2_AUDIT_SUMMARY.md  PHASE2_COMPLETE_SUMMARY.md  PHASE2_DEEP_VERIFICATION.md  PHASE2_FIXES_PROGRESS.md  PHASE2_FIXES_SUMMARY.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE3_COMPLETE.md  PROGRESS_REPORT.md  README.md  README_PHASE1_STATUS.md  ROBUSTNESS_REPORT.md  ROBUSTNESS_SUMMARY.md  STATUS.md  STRUCTURE.md  TASK1_COMPRESSION_COMPLETE.md  (+26 more)
.claude/: settings.local.json
ai-mesh/coordinator/: Cargo.toml
ai-mesh/coordinator/src/: lib.rs
ai-mesh/runtime/: Cargo.toml
ai-mesh/runtime/src/: lib.rs  main.rs
audit_results/: FINAL_AUDIT_REPORT.txt  PHASE1_SETUP.md  PHASE2_INVENTORY.md  PHASE3_CODE_ANALYSIS.md  PHASE3_TEST_EXECUTION.md  PHASE4_ROBUSTNESS.md  PHASE5_CRITICAL_GAPS.md  PHASE6_COMPREHENSIVE_FINDINGS.md
config/: genesis.toml
crates/codecs/: Cargo.toml
crates/codecs/src/: bincode_codec.rs  borsh_codec.rs  error.rs  lib.rs
crates/codecs/tests/: proptest_codecs.rs
crates/consensus/: Cargo.toml
crates/consensus/benches/: consensus_bench.rs
crates/consensus/src/: hotstuff.rs  hybrid.rs  lib.rs  pacemaker.rs  proptest_tests.rs  simple.rs  slashing.rs  vrf_pos.rs
crates/consensus/tests/: byzantine_fault.rs  chaos_resilience.rs  two_chain_finality.rs
crates/crypto/bls/: Cargo.toml
crates/crypto/bls/src/: aggregate.rs  keypair.rs  lib.rs  verify.rs
crates/crypto/bls/tests/: proptest_bls.rs
crates/crypto/kes/: Cargo.toml
crates/crypto/kes/src/: error.rs  evolution.rs  lib.rs  signature.rs
crates/crypto/kzg/: Cargo.toml
crates/crypto/kzg/src/: commitment.rs  lib.rs
crates/crypto/primitives/: Cargo.toml
crates/crypto/primitives/benches/: crypto_bench.rs
crates/crypto/primitives/src/: ed25519.rs  hash.rs  keypair.rs  lib.rs
crates/crypto/vrf/: Cargo.toml
crates/crypto/vrf/benches/: vrf_bench.rs
crates/crypto/vrf/src/: ecvrf.rs  lib.rs
crates/da/erasure-coding/: Cargo.toml
crates/da/erasure-coding/benches/: erasure.rs  erasure_bench.rs
crates/da/erasure-coding/src/: decoder.rs  encoder.rs  lib.rs
crates/da/shreds/: Cargo.toml
crates/da/shreds/src/: lib.rs  serialization.rs  shred.rs  validation.rs
crates/da/turbine/: Cargo.toml
crates/da/turbine/benches/: turbine.rs
crates/da/turbine/src/: broadcast.rs  lib.rs  receive.rs  repair.rs  tests.rs  topology.rs
crates/ledger/: Cargo.toml
crates/ledger/benches/: ledger_bench.rs
crates/ledger/src/: chain_store.rs  emission.rs  fee_market.rs  lib.rs  proptest_tests.rs  state.rs
crates/ledger/tests/: integration.rs  integration_ledger.rs  proptest_adversarial.rs  proptest_transactions.rs
crates/light-client/: Cargo.toml
crates/light-client/src/: header_store.rs  lib.rs  state_query.rs  verifier.rs
crates/light-client/tests/: proptest_light_client.rs
crates/mempool/: Cargo.toml
crates/mempool/benches/: mempool_bench.rs
crates/mempool/src/: lib.rs  pool.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: ai.rs  consensus.rs  da.rs  exporter.rs  lib.rs  mempool.rs  networking.rs  node.rs  p2p.rs  rpc.rs  runtime.rs  storage.rs
crates/mev/: Cargo.toml
crates/mev/src/: commit_reveal.rs  lib.rs
crates/networking/gossipsub/: Cargo.toml
crates/networking/gossipsub/src/: lib.rs  mesh.rs  router.rs  scoring.rs
crates/networking/quic-transport/: Cargo.toml
crates/networking/quic-transport/src/: connection.rs  endpoint.rs  lib.rs
crates/node/: Cargo.toml
crates/node/benches/: block_bench.rs
crates/node/src/: feature_gates.rs  fork_choice.rs  genesis.rs  hybrid_node.rs  lib.rs  main.rs  network_handler.rs  node.rs  poh.rs  sync.rs
crates/node/tests/: e2e_adversarial.rs  e2e_byzantine_network.rs  e2e_multi_validator.rs  multi_validator_test.rs  phase1_acceptance.rs  phase1_integration.rs
crates/p2p/: Cargo.toml
crates/p2p/benches/: p2p_bench.rs
crates/p2p/src/: compact_block.rs  dandelion.rs  gossip.rs  lib.rs  network.rs  peer_diversity.rs
crates/phase2-tests/: Cargo.toml
crates/phase2-tests/src/: lib.rs
crates/programs/account-abstraction/: Cargo.toml
crates/programs/account-abstraction/src/: lib.rs
crates/rollup/: Cargo.toml
crates/rollup/src/: fraud_proof.rs  lib.rs  state_commitment.rs
crates/runtime/: Cargo.toml
crates/runtime/benches/: scheduler.rs
crates/runtime/src/: host_functions.rs  ledger_state.rs  lib.rs  runtime_state.rs  scheduler.rs  vm.rs
crates/runtime/tests/: integration.rs
crates/types/: Cargo.toml
crates/types/benches/: types_bench.rs
crates/types/src/: account.rs  block.rs  chain_config.rs  consensus.rs  lib.rs  primitives.rs  proptest_tests.rs  receipt.rs  transaction.rs
docs/: architecture.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_block_deser.rs  fuzz_merkle_proof.rs  fuzz_transaction_deser.rs  fuzz_vrf_verify.rs  fuzz_wasm_execute.rs
scripts/: README.md  devnet.sh  docker-entrypoint.sh  docker-integration-smoke.sh  docker-test.sh  generate_scorecard.sh  (+15 more)
sdk/python/: README.md  pyproject.toml  pytest.ini  setup.py
sdk/python/examples/: 01_basic_transfer.py  02_staking.py  03_governance.py  04_ai_job.py  05_batch_jobs.py  README.md
sdk/python/src/aether/: __init__.py  ai.py  client.py  governance.py  keypair.py  staking.py  transaction.py  types.py
sdk/python/tests/: test_integration.py
sdks/python/: README.md  pyproject.toml
sdks/python/src/aether_sdk/: __init__.py  builders.py  client.py  transaction.py  types.py
sdks/python/src/aether_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdks/python/tests/: test_hello_job.py  test_rpc_methods.py  test_transfer_builder.py
(+184 files in other folders)
