[package]
name = "aether-ai-coordinator"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
serde_json = "1.0"
aether-verifiers-tee = { path = "../../crates/verifiers/tee" }

[dev-dependencies]
proptest = "1"
