[package]
name = "aether-ai-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"

# TEE support
# snp-guest (for SEV-SNP attestation)
# tdx-attest (for Intel TDX attestation)

# ML inference
# onnxruntime or candle for deterministic inference

