[package]
name = "aether-ai-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true

# TEE support
# snp-guest (for SEV-SNP attestation)
# tdx-attest (for Intel TDX attestation)

# ML inference
# onnxruntime or candle for deterministic inference

