[package]
name = "aether-consensus"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true

aether-types = { path = "../types" }
aether-crypto-vrf = { path = "../crypto/vrf" }
aether-crypto-bls = { path = "../crypto/bls" }
aether-crypto-primitives = { path = "../crypto/primitives" }
sha2 = "0.10"
