[package]
name = "aether-ledger"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
sha2.workspace = true

aether-types = { path = "../types" }
aether-state-merkle = { path = "../state/merkle" }
aether-state-storage = { path = "../state/storage" }

[dev-dependencies]
aether-crypto-primitives = { path = "../crypto/primitives" }
tempfile = "3"

