[package]
name = "aether-ledger"
version.workspace = true
edition.workspace = true
description = "eUTxO++ state machine and transaction processing for the Aether ledger"
categories = ["cryptography::cryptocurrencies"]
keywords = ["aether", "ledger", "utxo", "state"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
sha2.workspace = true
aether-crypto-primitives = { path = "../crypto/primitives" }

aether-types = { path = "../types" }
aether-state-merkle = { path = "../state/merkle" }
aether-state-storage = { path = "../state/storage" }

[dev-dependencies]
tempfile = "3"
proptest = { workspace = true }

[features]
proptest = []
