[package]
name = "aether-light-client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

aether-types = { path = "../types" }
aether-state-merkle = { path = "../state/merkle" }
aether-crypto-bls = { path = "../crypto/bls" }
