[package]
name = "aether-light-client"
version.workspace = true
edition.workspace = true
description = "SPV light-client verification and Merkle proof validation for Aether"
categories = ["cryptography::cryptocurrencies"]
keywords = ["aether", "light-client", "spv", "proofs"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

aether-types = { path = "../types" }
aether-state-merkle = { path = "../state/merkle" }
aether-crypto-bls = { path = "../crypto/bls" }

[dev-dependencies]
proptest.workspace = true
