[package]
name = "aether-mempool"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bincode.workspace = true

aether-types = { path = "../types" }

[dev-dependencies]
aether-crypto-primitives = { path = "../crypto/primitives" }
