[package]
name = "aether-mempool"
version.workspace = true
edition.workspace = true
description = "Fee-priority transaction pool with QoS support for the Aether mempool"
categories = ["cryptography::cryptocurrencies"]
keywords = ["aether", "mempool", "transactions", "fee"]

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bincode.workspace = true

aether-types = { path = "../types" }

[dev-dependencies]
aether-crypto-primitives = { path = "../crypto/primitives" }
