[package]
name = "aether-mempool"
version.workspace = true
edition.workspace = true
description = "Fee-priority transaction pool with QoS support for the Aether mempool"
categories = ["cryptography::cryptocurrencies"]
keywords = ["aether", "mempool", "transactions", "fee"]

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bincode.workspace = true
tracing.workspace = true

aether-types = { path = "../types" }
aether-metrics = { path = "../metrics" }

[dev-dependencies]
aether-crypto-primitives = { path = "../crypto/primitives" }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mempool_bench"
harness = false
