[package]
name = "aether-metrics"
version.workspace = true
edition.workspace = true
description = "Prometheus instrumentation and metrics collection for Aether node operators"
categories = ["development-tools::profiling"]
keywords = ["aether", "metrics", "prometheus", "observability"]

[dependencies]
prometheus.workspace = true
tracing.workspace = true
once_cell = "1"
tokio.workspace = true
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
anyhow.workspace = true
