[package]
name = "aether-mev"
version.workspace = true
edition.workspace = true
description = "MEV mitigation strategies and fair ordering for the Aether transaction pipeline"
categories = ["cryptography::cryptocurrencies"]
keywords = ["aether", "mev", "ordering", "fairness"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
bincode.workspace = true
sha2.workspace = true
rand.workspace = true

aether-types = { path = "../types" }
