[package]
name = "aether-node"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aether-node"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
blake3.workspace = true
sha2.workspace = true
bincode.workspace = true

aether-consensus = { path = "../consensus" }
aether-ledger = { path = "../ledger" }
aether-mempool = { path = "../mempool" }
aether-types = { path = "../types" }
aether-crypto-primitives = { path = "../crypto/primitives" }
aether-crypto-bls = { path = "../crypto/bls" }
aether-crypto-vrf = { path = "../crypto/vrf" }
aether-state-storage = { path = "../state/storage" }

[dev-dependencies]
tempfile = "3"
aether-crypto-bls = { path = "../crypto/bls" }
aether-crypto-vrf = { path = "../crypto/vrf" }
aether-runtime = { path = "../runtime" }
aether-quic-transport = { path = "../networking/quic-transport" }
wat = "1.0"
