[package]
name = "aether-node"
version.workspace = true
edition.workspace = true
description = "Aether validator node binary: block production, sync, consensus coordination"
categories = ["cryptography::cryptocurrencies"]
keywords = ["aether", "node", "validator", "blockchain"]

[[bin]]
name = "aether-node"
path = "src/main.rs"

[[bin]]
name = "genesis-ceremony"
path = "src/bin/genesis_ceremony.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde.workspace = true
bincode.workspace = true
serde_json.workspace = true
blake3.workspace = true
sha2.workspace = true

aether-consensus = { path = "../consensus" }
aether-ledger = { path = "../ledger" }
aether-program-staking = { path = "../programs/staking" }
aether-mempool = { path = "../mempool" }
aether-types = { path = "../types" }
aether-crypto-primitives = { path = "../crypto/primitives" }
aether-crypto-bls = { path = "../crypto/bls" }
aether-crypto-vrf = { path = "../crypto/vrf" }
aether-rpc-json = { path = "../rpc/json-rpc" }
aether-state-storage = { path = "../state/storage" }
aether-state-snapshots = { path = "../state/snapshots" }
aether-p2p = { path = "../p2p" }
aether-metrics = { path = "../metrics" }

[dev-dependencies]
tempfile = "3"
aether-crypto-bls = { path = "../crypto/bls" }
aether-crypto-vrf = { path = "../crypto/vrf" }
aether-runtime = { path = "../runtime" }
aether-quic-transport = { path = "../networking/quic-transport" }
