[package]
name = "aether-p2p"
version.workspace = true
edition.workspace = true

[dependencies]
aether-types = { path = "../types" }
aether-gossipsub = { path = "../networking/gossipsub" }
aether-quic-transport = { path = "../networking/quic-transport" }
tokio.workspace = true
libp2p.workspace = true
anyhow.workspace = true
tracing.workspace = true
sha2 = "0.10"
bincode = "1.3"
zstd = "0.13"
serde.workspace = true
