[package]
name = "aether-p2p"
version.workspace = true
edition.workspace = true
description = "libp2p-based peer-to-peer networking layer for the Aether blockchain"
categories = ["network-programming"]
keywords = ["aether", "p2p", "libp2p", "networking"]

[dependencies]
aether-types = { path = "../types" }
aether-gossipsub = { path = "../networking/gossipsub" }
aether-quic-transport = { path = "../networking/quic-transport" }
tokio.workspace = true
libp2p.workspace = true
anyhow.workspace = true
tracing.workspace = true
sha2 = "0.10"
bincode = "1.3"
zstd = "0.13"
serde.workspace = true
aether-metrics = { path = "../metrics" }

[dev-dependencies]
proptest = "1"
