[package]
name = "aether-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
aether-types = { path = "../types" }
aether-ledger = { path = "../ledger" }
anyhow.workspace = true
thiserror.workspace = true
wasmtime.workspace = true
serde.workspace = true
sha2 = "0.10"
rayon = "1.8"

[dev-dependencies]
wat = "1.0"
tempfile = "3"
aether-state-storage = { path = "../state/storage" }
