[package]
name = "aether-runtime"
version.workspace = true
edition.workspace = true
description = "Wasmtime-based parallel WASM execution runtime for Aether smart contracts"
categories = ["wasm", "cryptography::cryptocurrencies"]
keywords = ["aether", "wasm", "runtime", "smart-contracts"]

[dependencies]
aether-types = { path = "../types" }
aether-ledger = { path = "../ledger" }
anyhow.workspace = true
thiserror.workspace = true
wasmtime.workspace = true
serde.workspace = true
sha2 = "0.10"
tracing.workspace = true
rayon = "1"

[dev-dependencies]
wat = "1"
proptest = "1"
