[package]
name = "aether-types"
version.workspace = true
edition.workspace = true
description = "Shared primitive types for the Aether blockchain (Block, Transaction, Address, etc.)"
categories = ["cryptography::cryptocurrencies"]
keywords = ["aether", "blockchain", "types"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
bincode.workspace = true
sha2.workspace = true
hex = "0.4"
anyhow.workspace = true
toml.workspace = true
aether-crypto-primitives = { path = "../crypto/primitives" }
