[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-sdk"
version = "0.1.0"
description = "Python SDK for the Aether blockchain"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Aether Labs" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4", "mypy>=1.6"]

[tool.setuptools.packages.find]
where = ["src"]
