[package]
name = "aether-crypto-bls"
version.workspace = true
edition.workspace = true
description = "BLS12-381 aggregate signature scheme for Aether validator vote aggregation"
categories = ["cryptography"]
keywords = ["aether", "bls", "crypto", "aggregate"]

[dependencies]
blst.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
sha2 = "0.10"
rand = "0.8"
rayon = "1"

[dev-dependencies]
proptest.workspace = true
