[package]
name = "aether-crypto-kes"
version.workspace = true
edition.workspace = true
description = "Key-Evolving Signature (KES) scheme for Aether forward-secure validator keys"
categories = ["cryptography"]
keywords = ["aether", "kes", "forward-secure", "signatures"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
rand.workspace = true
sha2.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
zeroize.workspace = true
