[package]
name = "aether-crypto-kzg"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true

# KZG implementation (e.g., arkworks for polynomial commitments)

