[package]
name = "aether-crypto-kzg"
version.workspace = true
edition.workspace = true
description = "KZG polynomial commitment scheme for Aether data availability proofs"
categories = ["cryptography"]
keywords = ["aether", "kzg", "polynomial", "commitments"]

[dependencies]
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
blst.workspace = true
rand.workspace = true
sha2.workspace = true

[features]
test-utils = []
