[package]
name = "aether-crypto-primitives"
version.workspace = true
edition.workspace = true
description = "Ed25519 signing, SHA-256/BLAKE3 hashing, and batch verification primitives for Aether"
categories = ["cryptography"]
keywords = ["aether", "crypto", "ed25519", "blake3"]

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core", "batch"] }
sha2.workspace = true
blake3.workspace = true
thiserror.workspace = true
rand = "0.8"
rayon = "1"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false
