[package]
name = "aether-crypto-vrf"
version.workspace = true
edition.workspace = true
description = "Verifiable Random Function (VRF) for Aether leader election and slot randomness"
categories = ["cryptography"]
keywords = ["aether", "vrf", "randomness", "blockchain"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
sha2 = "0.10"
rand = "0.8"
curve25519-dalek.workspace = true
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "vrf_bench"
harness = false
