[package]
name = "aether-da-shreds"
version.workspace = true
edition.workspace = true
description = "Data availability shred types and Merkle proof structures for Aether Turbine"
categories = ["cryptography::cryptocurrencies"]
keywords = ["aether", "shreds", "data-availability", "turbine"]

[dependencies]
serde.workspace = true
bincode.workspace = true
anyhow.workspace = true
sha2.workspace = true

aether-types = { path = "../../types" }
aether-crypto-primitives = { path = "../../crypto/primitives" }

[dev-dependencies]
proptest.workspace = true
