[package]
name = "aether-da-turbine"
version.workspace = true
edition.workspace = true
description = "Turbine block propagation protocol with erasure-coded shred distribution for Aether"
categories = ["network-programming", "cryptography::cryptocurrencies"]
keywords = ["aether", "turbine", "da", "propagation"]

[dependencies]
tokio.workspace = true
anyhow.workspace = true
sha2.workspace = true

aether-da-erasure = { path = "../erasure-coding" }
aether-da-shreds = { path = "../shreds" }
aether-types = { path = "../../types" }
aether-crypto-primitives = { path = "../../crypto/primitives" }

[dev-dependencies]
rand = "0.8"
