[package]
name = "aether-quic-transport"
version.workspace = true
edition.workspace = true
description = "QUIC-based low-latency transport layer for Aether inter-validator communication"
categories = ["network-programming"]
keywords = ["aether", "quic", "transport", "networking"]

[dependencies]
quinn.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rustls = "0.21"
rustls-pemfile = "1"
rcgen = "0.11"
tracing.workspace = true
bytes = "1"
webpki = "0.22"

