[package]
name = "aether-account-abstraction"
version.workspace = true
edition.workspace = true
description = "Account abstraction program enabling smart-contract-controlled accounts on Aether"
categories = ["cryptography::cryptocurrencies"]
keywords = ["aether", "account-abstraction", "smart-accounts"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

aether-types = { path = "../../types" }
